Tue Apr  8 03:10:02 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/dblib/bcp.c
	* src/tds/read.c src/tds/token.c src/tds/write.c
	- More charset fixes: tsql runs sp_who.  

Mon Apr  7 14:57:59 EDT 2003
	* src/tds/character_sets.h added ISO-8855-1
	* src/tds/config.c src/tds/iconv.c src/tds/login.c
	* src/tds/read.c src/tds/token.c src/tds/write.c
	- Made sufficient repairs that tsql now logs in.

Sun Apr  6 14:41:05 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h include/tdsiconv.h
	* src/dblib/bcp.c
	* src/server/login.c
	* src/tds/iconv.c src/tds/login.c src/tds/mem.c src/tds/read.c
	* src/tds/token.c src/tds/write.c
	- removed all hard-coded references to server-side unicode.  
	- data structures and logic now attempt to allow for any pair
	- of client/server character encodings.  
	- This code is UNTESTED due to time constraints and almost certainly
	- BROKEN, but does compile.  

Thu Apr 03 22:16:02 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* TODO: add a possible test to odbc
	* include/tds.h src/tds/query.c: add comment
	* src/tds/mem.c src/tds/iconv.c src/tds/des.c: indent(1)
	* src/tds/token.c:
	- indent(1)
	- added many comments

Fri Apr  4 15:27:39 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/sybdb.h src/dblib/dblib.c implement dbmorecmds(). 

Thu Apr 03 22:16:02 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c src/odbc/connectparams.h:
	- avoid allocating memory for all string

Thu Apr 03 21:42:50 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: remove warnings

Thu Apr 03 21:36:58 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c:
	- add tds_quote_string function
	* src/odbc/odbc.c:
	- rewritten many similar functions, quoting string if needed

Thu Apr 03 14:43:08 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/tables.c:
	- add a test for SQLTables
