@@ -44,10 +44,11 @@
 #endif /* HAVE_NETINET_IN_H */
 
 #include "tds.h"
+#include "tdsiconv.h"
 #include "tdssrv.h"
 #include "tdsstring.h"
 
-static char software_version[] = "$Id: login.c,v 1.26 2003-04-06 20:34:57 jklowden Exp $";
+static char software_version[] = "$Id: login.c,v 1.27 2003-04-08 10:25:42 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 unsigned char *
@@ -202,7 +203,7 @@ tds7_read_login(TDSSOCKET * tds, TDSLOGIN * login)
 	tds_get_n(tds, unicode_string, password_len * 2);
 	tds7_decrypt_pass((unsigned char *) unicode_string, password_len * 2, (unsigned char *) unicode_string);
 ///	password_len = tds7_unicode2ascii(tds, unicode_string, password_len, buf, password_len);
-	password_len = tds_iconv(to_client, &tds->iconv_info, unicode_string, &password_len, buf, password_len);
+	password_len = tds_iconv(to_client, tds->iconv_info, unicode_string, &password_len, buf, password_len);
 	buf[password_len] = 0;
 	tds_dstr_set(&login->password, buf);
 	free(unicode_string);
