@@ -1,3 +1,10 @@
+Tue Apr 08 12:24:53 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
+	* include/tds.h include/tdsiconv.h src/server/login.c:
+	* src/tds/iconv.c src/tds/login.c src/tds/mem.c:
+	* src/tds/read.c src/tds/token.c src/tds/write.c:
+	- allow tests to compile
+	- remove some warnings
+
 Tue Apr  8 03:10:02 EDT 2003	JK Lowden <jklowden@schemamania.org>
 	* include/tds.h src/dblib/bcp.c
 	* src/tds/read.c src/tds/token.c src/tds/write.c
